--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/lux/bootstrap.min.css">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <title>Álvaro González Ferrer - Portfolio - Developer</title>
 </head>
 <body>
@@ -39,8 +41,63 @@
 
     <div class="container">
 
-      <div class="row">
+      <!-- row -->
+      <BR>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="card h-100">
+              <div class="card-header">
+                Light weight data grip for PHP and MySQL
+              </div>
+              <img src="screens/datagrid.jpg" class="card-img-top" alt="Datagrid">
+              <div class="card-body">
+                <h5 class="card-title">KronoDataGrid</h5>
+                <p class="card-text">
+                  I needed a lightweight data grid for some commercial projects, and all were very bloated and expensive, so I developed this super light weight data grid.
+                  <br>
+                  Useful things in this project:
+                  <ul>
+                    <li>A data grid with editable tools, kronoDataGrid.php</li>
+                      <li>RANDOM name and surname generator for your projects, in install/index.php and supporting files.</li>
+                      <li>Lightweight MySQL connect wrapper -  Check connectMySQL.php</li>
+                    </ul>
+                  </p>
+                </div>
+                <a href="https://github.com/alvarogonzalezferrer/kronodatagrid" class="btn btn-primary mt-auto" target='_blank'>Datagrid for you!</a>
+              </div>
+            </div>
 
+            <div class="col-sm-6">
+              <div class="card h-100">
+                <div class="card-header">
+                  Affordable ERP system for small companies
+                </div>
+                <img src="screens/burocracia.jpg" class="card-img-top" alt="ERP system">
+                <div class="card-body">
+                  <h5 class="card-title">ERP system</h5>
+                  <p class="card-text">
+                    In house 100% developed from scratch ERP (enterprise resource planning) for small companies at Buenos Aires.
+                    <br>
+                    The system manages all for the company: clients, reports, roadmaps, business resources, orders, receipts, purchase orders, and payroll.
+                    <br>
+                    Developed from scratch using PHP, MySQL, HTML5, Javascript and CSS, running on a Linux Apache web server,
+                    <br>
+                    This system really improved the productivity of the small company, maximizing their profits and reducing costs. The ERP system integrates varied organizational systems and facilitates error-free transactions and production, thereby enhancing the organization's efficiency.
+                    <br>
+                    Soon I will be releasing original source code from this project, a total open source ERP solution, 100% developed by me, specially targeted to small companies that can't afford very costly solutions like SAP, Oracle, IBM, etc solutions...
+                    <br><br>
+                    NOTE: all data shown on screenshoot is fictional RANDOM data generated for a test system. No private data was shown.
+                  </p>
+
+                </div>
+                <a href="https://github.com/alvarogonzalezferrer/" class="btn btn-primary mt-auto" target='_blank'>Coming soon!</a>
+
+              </div>
+            </div>
+          </div>
+          <!-- end row -->
+
+      <div class="row">
         <div class="col-sm-6">
           <div class="card h-100">
             <div class="card-header">
@@ -184,55 +241,7 @@
               </div>
               <!-- end row -->
 
-              <!-- row -->
-              <BR>
-                <div class="row">
-                  <div class="col-sm-6">
-                    <div class="card h-100">
-                      <div class="card-header">
-                        Light weight data grip for PHP and MySQL
-                      </div>
-                      <img src="screens/datagrid.jpg" class="card-img-top" alt="Datagrid">
-                      <div class="card-body">
-                        <h5 class="card-title">KronoDataGrid</h5>
-                        <p class="card-text">
-                          I needed a lightweight data grid for some commercial projects, and all were very bloated and expensive, so I developed this super light weight data grid.
-                          <br>
-                          Useful things in this project:
-                          <ul>
-                            <li>A data grid with editable tools, kronoDataGrid.php</li>
-                              <li>RANDOM name and surname generator for your projects, in install/index.php and supporting files.</li>
-                              <li>Lightweight MySQL connect wrapper -  Check connectMySQL.php</li>
-                            </ul>
-                          </p>
-                        </div>
-                        <a href="https://github.com/alvarogonzalezferrer/kronodatagrid" class="btn btn-primary mt-auto" target='_blank'>Datagrid for you!</a>
-                      </div>
-                    </div>
 
-                    <div class="col-sm-6">
-                      <div class="card h-100">
-                        <div class="card-header">
-                          A operating system for very old computers.
-                        </div>
-                        <img src="screens/krjr.jpg" class="card-img-top" alt="Desktop">
-                        <div class="card-body">
-                          <h5 class="card-title">Kr Jr</h5>
-                          <p class="card-text">
-                            Once upon a time, I coded a GUI operating system for old computers.<br>
-                            Never finished this huge project, but it is in a stage where it runs and can be tested on old computers or a virtual machine.<br>
-                            You have a working desktop, a working boot sequence and can run MS DOS software and games.<br>
-                            It is SUPER FAST. Even running on a virtual machine emulator, it will work fast. Mostly C and Assembler code.<br>
-                            It can run even in a 386 with 1mb RAM and no HD
-                            It fits on a diskette! Recycle your old PC! Inspired on micro kernels such as QNX, but the code is 100% my production, not based on any other kernels.
-                          </p>
-                        </div>
-                        <a href="https://sourceforge.net/projects/kronojunior/" class="btn btn-primary mt-auto" target='_blank'>Retro fun!</a>
-
-                      </div>
-                    </div>
-                  </div>
-                  <!-- end row -->
 
                   <!-- row -->
                   <BR>
@@ -276,29 +285,26 @@
                       <div class="col-sm-6">
                         <div class="card h-100">
                           <div class="card-header">
-                            Always releasing new code for the benefit of the people.
+                            A operating system for very old computers.
                           </div>
-                          <img src="screens/opensource.jpg" class="card-img-top" alt="Open Source">
+                          <img src="screens/krjr.jpg" class="card-img-top" alt="Desktop">
                           <div class="card-body">
-                            <h5 class="card-title">GitHub & SourceForge</h5>
+                            <h5 class="card-title">Kr Jr</h5>
                             <p class="card-text">
-                              I have lots more projects, algorithms, and cool stuff to release, to show, update and improve.<br>
-                              You can find more of my works, ideas, projects, and hobbies and my GitHub, SourceForge and LinkedIn pages.<br>
-                              Soon I will be updating also my hardware projects.<br>
+                              Once upon a time, I coded a GUI operating system for old computers.<br>
+                              Never finished this huge project, but it is in a stage where it runs and can be tested on old computers or a virtual machine.<br>
+                              You have a working desktop, a working boot sequence and can run MS DOS software and games.<br>
+                              It is SUPER FAST. Even running on a virtual machine emulator, it will work fast. Mostly C and Assembler code.<br>
+                              It can run even in a 386 with 1mb RAM and no HD
+                              It fits on a diskette! Recycle your old PC! Inspired on micro kernels such as QNX, but the code is 100% my production, not based on any other kernels.
                             </p>
-
                           </div>
-
-                            <a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary mt-auto" target='_blank'>GitHub</a>
-
-
-                            <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary mt-auto" target='_blank'>Sourceforge</a>
-
-
-                            <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary mt-auto" target='_blank'>LinkedIn</a>
+                          <a href="https://sourceforge.net/projects/kronojunior/" class="btn btn-primary mt-auto" target='_blank'>Retro fun!</a>
 
                         </div>
                       </div>
+
+                      <di
                     </div>
                     <!-- end row -->
 
@@ -330,31 +336,30 @@
                         <div class="col-sm-6">
                           <div class="card h-100">
                             <div class="card-header">
-                              Get your motor runnin',
-                              Head out on the highway,
-                              Lookin' for adventure,
-                              And whatever comes our way
+                              Always releasing new code for the benefit of the people.
                             </div>
-                            <img src="screens/harley.jpg" class="card-img-top" alt="Harley">
+                            <img src="screens/opensource.jpg" class="card-img-top" alt="Open Source">
                             <div class="card-body">
-                              <h5 class="card-title">Harley Davidson Argentina tips & tricks</h5>
+                              <h5 class="card-title">GitHub & SourceForge</h5>
                               <p class="card-text">
-                                Alternative parts list for Harley Davidson Sportster available in Argentina.
-                                <br>
-                                Given the country's situation, with constant import bans, it becomes difficult to keep an imported motorcycle running.
-                                <br>
-                                That's why I compiled, over more than 16 years, a list of alternative parts to keep the Harley Davidson Sportster running in optimal condition.
-                                <br>
-                                This project starts in 2004, when I bought my first HD XL883.
-                                <br>
-                                SPANISH CONTENT ahead.
+                                I have lots more projects, algorithms, and cool stuff to release, to show, update and improve.<br>
+                                You can find more of my works, ideas, projects, and hobbies and my GitHub, SourceForge and LinkedIn pages.<br>
+                                Soon I will be updating also my hardware projects.<br>
                               </p>
 
                             </div>
-                            <a href="https://github.com/alvarogonzalezferrer/harley_alternativas_argentina" class="btn btn-primary mt-auto" target='_blank'>Get your motor runnin'</a>
+
+                              <a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary mt-auto" target='_blank'>GitHub</a>
+
+
+                              <a href="https://sourceforge.net/u/kronopio/profile/" class="btn btn-primary mt-auto" target='_blank'>Sourceforge</a>
+
+
+                              <a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary mt-auto" target='_blank'>LinkedIn</a>
 
                           </div>
                         </div>
+
                       </div>
                       <!-- end row -->
 
@@ -364,27 +369,26 @@
                           <div class="col-sm-6">
                             <div class="card h-100">
                               <div class="card-header">
-                                Affordable ERP system for small companies
+                                Get your motor runnin'...
+
                               </div>
-                              <img src="screens/burocracia.jpg" class="card-img-top" alt="ERP system">
+                              <img src="screens/harley.jpg" class="card-img-top" alt="Harley">
                               <div class="card-body">
-                                <h5 class="card-title">ERP system</h5>
+                                <h5 class="card-title">Harley Davidson Argentina tips & tricks</h5>
                                 <p class="card-text">
-                                  In house 100% developed from scratch ERP (enterprise resource planning) for small companies at Buenos Aires.
+                                  Alternative parts list for Harley Davidson Sportster available in Argentina.
                                   <br>
-                                  The system manages all for the company: clients, reports, roadmaps, business resources, orders, receipts, purchase orders, and payroll.
+                                  Given the country's situation, with constant import bans, it becomes difficult to keep an imported motorcycle running.
                                   <br>
-                                  Developed from scratch using PHP, MySQL, HTML5, Javascript and CSS, running on a Linux Apache web server,
+                                  That's why I compiled, over more than 16 years, a list of alternative parts to keep the Harley Davidson Sportster running in optimal condition.
                                   <br>
-                                  This system really improved the productivity of the small company, maximizing their profits and reducing costs. The ERP system integrates varied organizational systems and facilitates error-free transactions and production, thereby enhancing the organization's efficiency.
+                                  This project starts in 2004, when I bought my first HD XL883.
                                   <br>
-                                  Soon I will be releasing original source code from this project, a total open source ERP solution, 100% developed by me, specially targeted to small companies that can't afford very costly solutions like SAP, Oracle, IBM, etc solutions...
-                                  <br><br>
-                                  NOTE: all data shown on screenshoot is fictional RANDOM data generated for a test system. No private data was shown.
+                                  SPANISH CONTENT ahead.
                                 </p>
 
                               </div>
-                              <a href="https://github.com/alvarogonzalezferrer/" class="btn btn-primary mt-auto" target='_blank'>Coming soon!</a>
+                              <a href="https://github.com/alvarogonzalezferrer/harley_alternativas_argentina" class="btn btn-primary mt-auto" target='_blank'>Get your motor runnin'</a>
 
                             </div>
                           </div>
