--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <img src="screens/kraptor.jpg" class="card-img-top" alt="Kraptor game">
               <div class="card-body">
                 <h5 class="card-title">Kraptor</h5>
-                <p class="card-text">A old school space ship shooter, done in C++, closs platform.
+                <p class="card-text">Old school space ship shooter, done in C++, closs platform.
                   Kraptor is a classic shoot 'em up scroller game, where you must fight against tons of bad dudes.
                   <br>
                   This is a full game with massive destruction, powerful weapons, and high speed action in varied levels.
@@ -277,7 +277,7 @@
                             </p>
 
                           </div>
-                          <a href="https://github.com/alvarogonzalezferrer/kronognuguitarra" class="btn btn-primary mt-auto" target='_blank'>Time for a virtuos solo!</a>
+                          <a href="https://github.com/alvarogonzalezferrer/kronognuguitarra" class="btn btn-primary mt-auto" target='_blank'>Time for a virtuous solo!</a>
 
                         </div>
                       </div>
@@ -285,7 +285,7 @@
                       <div class="col-sm-6">
                         <div class="card h-100">
                           <div class="card-header">
-                            A operating system for very old computers.
+                            Operating system for very old computers.
                           </div>
                           <img src="screens/krjr.jpg" class="card-img-top" alt="Desktop">
                           <div class="card-body">
