--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 
                   </div>
                 </div>
+
               </div>
               <!-- end row -->
 
@@ -314,6 +315,33 @@
                         <div class="col-sm-6">
                           <div class="card h-100">
                             <div class="card-header">
+                              Tank battle for two players.
+                            </div>
+                            <img src="screens/kronobz.gif" class="card-img-top" alt="Krono's Battle Zone">
+                            <div class="card-body">
+                              <h5 class="card-title">Krono's Battle Zone</h5>
+                              <p class="card-text">
+                                Tank battle for 2 players, split-screen, hot-seat, or vs computer.
+                                <br>
+                                  <ul>
+                                    <li>up to 2 players, split-screen or versus computer</li>
+                                    <li>weather effects: rain, snow, day / night, fog, sand storm, hail storm, etc</li>
+                                    <li>power ups : shield, weapons, radar, repairs, etc</li>
+                                    <li>terrain can be destroyed!</li>
+                                    <li>random terrain : grass, snow, sand, mud, etc</li>
+                                    <li>huge random battle zone</li>
+                                  </ul>
+                              </p>
+
+                            </div>
+                            <a href="https://github.com/alvarogonzalezferrer/krono_battle_zone" class="btn btn-primary mt-auto" target='_blank'>Get a friend to play!</a>
+
+                          </div>
+                        </div>
+
+                        <div class="col-sm-6">
+                          <div class="card h-100">
+                            <div class="card-header">
                               College notes: Spanish content. CONTENIDO EN ESPAÑOL.
                             </div>
                             <img src="screens/uade.jpg" class="card-img-top" alt="UADE">
@@ -333,6 +361,7 @@
                           </div>
                         </div>
 
+                        <!-- FOR FUTURE USE
                         <div class="col-sm-6">
                           <div class="card h-100">
                             <div class="card-header">
@@ -359,6 +388,7 @@
 
                           </div>
                         </div>
+                        ------------------ -->
 
                       </div>
                       <!-- end row -->
