--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Álvaro González Ferrer</h1>
     <h2>Software developer</h2>
 
-    <p>Im Álvaro, also known as Krono, Kronopio and many others "noms de guerre".</p>
+    <p>I'm Álvaro, also known as Krono, Kronopio and many others "noms de guerre".</p>
     <p>I have been developing software since I was a kid, starting on an old Commodore 64.</p>
     <p>I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests.</p>
     <p>I have almost two decades of experience as a game developer, building Indie games, as well as large game studios.  In addition, I have  many years of experience building business software for small enterprises, and even translation engines.</p>
