--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     BTC: 33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q
 </p>
 <p>
-    <img src="archivos_soporte/btc/wallet.png" class="card-img-top" alt="33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q">
+    <img src="btc/wallet.png" class="card-img-top" alt="33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q">
 </p>
 <p>
     Thanks for your support!
