--- a/index.html
+++ b/index.html
@@ -29,22 +29,7 @@
 
     <p><a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary btn-block" target='_blank'>LinkedIn</a></p>
 
-    <h2>Donations</h2>
-<p>
-    Did you found my source code useful? Making this document takes a lot of time, effort, and research.
-</p>
-<p>
-    If you want to help me continue with my work, you can donate via Bitcoin to my address, everything helps, it can be pennies, it doesn't matter!
-</p>
-<p>
-    BTC: 33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q
-</p>
-<p>
-    <img src="btc/wallet.png" class="card-img-top" alt="33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q">
-</p>
-<p>
-    Thanks for your support!
-</p>
+
 
     <h2>Portfolio</h2>
 
@@ -466,7 +451,25 @@
 
                   </div>
 
+                  <div class="container">
 
+                  <h2>Donations</h2>
+                  <p>
+                  Did you found my source code useful? Making this document takes a lot of time, effort, and research.
+                  </p>
+                  <p>
+                  If you want to help me continue with my work, you can donate via Bitcoin to my address, everything helps, it can be pennies, it doesn't matter!
+                  </p>
+                  <p>
+                  BTC: 33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q
+                  </p>
+                  <p>
+                  <img src="btc/wallet.png" class="card-img-top" alt="33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q">
+                  </p>
+                  <p>
+                  Thanks for your support!
+                  </p>
+                </div>
 
                   <!-- <br>Bonus track :P<br> -->
 
