--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
 
     <p><a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary btn-block" target='_blank'>LinkedIn</a></p>
 
-
-
     <h2>Portfolio</h2>
 
     <p>I have an extremely diverse project portfolio, but below are a few. The featured projects below are released freely to the public, as open source software.</p>
@@ -244,8 +242,6 @@
               </div>
               <!-- end row -->
 
-
-
                   <!-- row -->
                   <BR>
                     <div class="row">
@@ -450,7 +446,7 @@
                         <!-- end row -->
 
                   </div>
-
+                  <br><br><br><br>
                   <div class="container">
 
                   <h2>Donations</h2>
@@ -464,7 +460,7 @@
                   BTC: 33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q
                   </p>
                   <p>
-                  <img src="btc/wallet.png" class="card-img-top" alt="33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q">
+                  <img style="width:50%;" src="btc/wallet.png" class="card-img-top" alt="33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q">
                   </p>
                   <p>
                   Thanks for your support!
