--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                   <p>
                   If you want to help me continue with my work, you can donate via Bitcoin to my address, everything helps, it can be pennies, it doesn't matter!
                   </p>
-                  <p>
+                  <p style="font-weight:bold;">
                   BTC: 33Xh8YBQsMW8LGrnRR5wgEKXNzoaE5C95Q
                   </p>
                   <p>
