--- a/index.html
+++ b/index.html
@@ -397,6 +397,59 @@
                           <div class="col-sm-6">
                             <div class="card h-100">
                               <div class="card-header">
+                                HODL!
+                              </div>
+                              <img src="screens/harley.jpg" class="card-img-top" alt="Harley">
+                              <div class="card-body">
+                                <h5 class="card-title">Bitcoin Swiss Army Knife</h5>
+                                <p class="card-text">
+                                  Currency converter, by buying cryptocurrencies, using the Bitso exchange.
+                                  <br>
+                                  Serves for Argentine peso ARS, and US dollar USD.
+                                  <br>
+                                  It also allows you to place buy and sell orders, and see the economic indicators.
+                                  <br>
+                                  It is much more efficient and faster than entering the app or the website, since we can do everything from the command console quickly.
+                                  <br>
+                                  SPANISH CONTENT ahead.
+                                </p>
+                              </div>
+                              <a href="https://github.com/alvarogonzalezferrer/krono_arbolito_bitso" class="btn btn-primary mt-auto" target='_blank'>TO THE MOON!</a>
+                            </div>
+                          </div>
+
+                          <div class="col-sm-6">
+                            <div class="card h-100">
+                              <div class="card-header">
+                                Spanish MySQL
+                              </div>
+                              <img src="screens/krono.jpg" class="card-img-top" alt="Krono">
+                              <div class="card-body">
+                                <h5 class="card-title">More projects coming soon!</h5>
+                                <p class="card-text">
+                                  How to correctly enter the special characters of the Spanish language to MySQL.
+                                  <br>
+                                  Many times we find databases that have entries like "Rubén", "Julián" stored as "Rubén", "JuliÃ¡n", or similar things where the data is apparently corrupt.
+                                  <br>
+                                  In this document we are going to explore the solution to this problem.
+                                  <br>
+                                  Spanish content ahead!
+                                </p>
+
+                              </div>
+                              <a href="https://github.com/alvarogonzalezferrer/espanol_en_mysql" class="btn btn-primary mt-auto" target='_blank'>Spanish MySQL</a>
+
+                            </div>
+                          </div>
+                        </div>
+                        <!-- end row -->
+
+                      <!-- row -->
+                      <BR>
+                        <div class="row">
+                          <div class="col-sm-6">
+                            <div class="card h-100">
+                              <div class="card-header">
                                 Get your motor runnin'...
 
                               </div>
