--- a/index.html
+++ b/index.html
@@ -399,11 +399,11 @@
                               <div class="card-header">
                                 HODL!
                               </div>
-                              <img src="screens/harley.jpg" class="card-img-top" alt="Harley">
+                              <img src="screens/arbolito.jpg" class="card-img-top" alt="krono_arbolito_bitso">
                               <div class="card-body">
                                 <h5 class="card-title">Bitcoin Swiss Army Knife</h5>
                                 <p class="card-text">
-                                  Currency converter, by buying cryptocurrencies, using the Bitso exchange.
+                                  Experimental currency converter, by buying cryptocurrencies, using the Bitso exchange.
                                   <br>
                                   Serves for Argentine peso ARS, and US dollar USD.
                                   <br>
@@ -411,7 +411,9 @@
                                   <br>
                                   It is much more efficient and faster than entering the app or the website, since we can do everything from the command console quickly.
                                   <br>
-                                  SPANISH CONTENT ahead.
+                                  This software is my answer to the economic collapse that Argentina is facing, and to try to avoid the hyperinflation.
+                                  <br>
+                                  Spanish content ahead - Python Code.
                                 </p>
                               </div>
                               <a href="https://github.com/alvarogonzalezferrer/krono_arbolito_bitso" class="btn btn-primary mt-auto" target='_blank'>TO THE MOON!</a>
@@ -423,17 +425,17 @@
                               <div class="card-header">
                                 Spanish MySQL
                               </div>
-                              <img src="screens/krono.jpg" class="card-img-top" alt="Krono">
+                              <img src="screens/espanol_mysql.jpg" class="card-img-top" alt="espanol_mysql">
                               <div class="card-body">
-                                <h5 class="card-title">More projects coming soon!</h5>
+                                <h5 class="card-title">Spanish characters and MySQL</h5>
                                 <p class="card-text">
                                   How to correctly enter the special characters of the Spanish language to MySQL.
                                   <br>
-                                  Many times we find databases that have entries like "Rubén", "Julián" stored as "Rubén", "JuliÃ¡n", or similar things where the data is apparently corrupt.
+                                  Many times we find databases that have entries like "Rubén", "Julián" stored as "RubÃ©n", "JuliÃ¡n", or similar things where the data is apparently corrupt.
                                   <br>
                                   In this document we are going to explore the solution to this problem.
                                   <br>
-                                  Spanish content ahead!
+                                  Spanish content ahead! - MySQL, PHP
                                 </p>
 
                               </div>
@@ -465,7 +467,7 @@
                                   <br>
                                   This project starts in 2004, when I bought my first HD XL883.
                                   <br>
-                                  SPANISH CONTENT ahead.
+                                  Spanish content ahead.
                                 </p>
 
                               </div>
