--- a/index.html
+++ b/index.html
@@ -40,6 +40,50 @@
     <p>I can speak and write English and Spanish.</p>
 
     <div class="container">
+      <!-- row -->
+      <BR>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="card h-100">
+              <div class="card-header">
+                Control your phone from your computer
+              </div>
+              <img src="screens/scrcpy.jpg" class="card-img-top" alt="Android">
+              <div class="card-body">
+                <h5 class="card-title">Scrcpy light launcher</h5>
+                <p class="card-text">
+                  Control your Android phone or device from your desktop PC using screen mirroring.
+                  <br>
+                  This is a very light, very fast, very easy and open source alternative.
+                  <br>
+                  I don't like bloated apps that depend on a million libraries to do simple things.
+                  </p>
+                </div>
+                <a href="https://github.com/alvarogonzalezferrer/scrcpy_light_launcher" class="btn btn-primary mt-auto" target='_blank'>Control your phone!</a>
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <div class="card h-100">
+                <div class="card-header">
+                  Premier Warlord SpeedHack
+                </div>
+                <img src="screens/warlord.jpg" class="card-img-top" alt="Warlord Game">
+                <div class="card-body">
+                  <h5 class="card-title">ERP system</h5>
+                  <p class="card-text">
+                    A speedhack game of evil shooting action, winner most evil category 2007.
+                    <br>
+                    This game was made in only 24 hs in C++ to fullfil the SpeedHack 2007 rules, and WON most evil game that year.
+                  </p>
+
+                </div>
+                <a href="https://github.com/alvarogonzalezferrer/warlord_premier_mr_bush" class="btn btn-primary mt-auto" target='_blank'>Game available!</a>
+
+              </div>
+            </div>
+          </div>
+          <!-- end row -->
 
       <!-- row -->
       <BR>
