--- a/index.html
+++ b/index.html
@@ -40,50 +40,51 @@
     <p>I can speak and write English and Spanish.</p>
 
     <div class="container">
-      <!-- row -->
-      <BR>
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="card h-100">
-              <div class="card-header">
-                Control your phone from your computer
-              </div>
-              <img src="screens/scrcpy.jpg" class="card-img-top" alt="Android">
-              <div class="card-body">
-                <h5 class="card-title">Scrcpy light launcher</h5>
-                <p class="card-text">
-                  Control your Android phone or device from your desktop PC using screen mirroring.
-                  <br>
-                  This is a very light, very fast, very easy and open source alternative.
-                  <br>
-                  I don't like bloated apps that depend on a million libraries to do simple things.
-                  </p>
-                </div>
-                <a href="https://github.com/alvarogonzalezferrer/scrcpy_light_launcher" class="btn btn-primary mt-auto" target='_blank'>Control your phone!</a>
-              </div>
-            </div>
 
-            <div class="col-sm-6">
-              <div class="card h-100">
-                <div class="card-header">
-                  Premier Warlord SpeedHack
-                </div>
-                <img src="screens/warlord.jpg" class="card-img-top" alt="Warlord Game">
-                <div class="card-body">
-                  <h5 class="card-title">ERP system</h5>
-                  <p class="card-text">
-                    A speedhack game of evil shooting action, winner most evil category 2007.
-                    <br>
-                    This game was made in only 24 hs in C++ to fullfil the SpeedHack 2007 rules, and WON most evil game that year.
-                  </p>
-
-                </div>
-                <a href="https://github.com/alvarogonzalezferrer/warlord_premier_mr_bush" class="btn btn-primary mt-auto" target='_blank'>Game available!</a>
-
-              </div>
-            </div>
+  <!-- row -->
+  <BR>
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card h-100">
+          <div class="card-header">
+            Control your phone from your computer
           </div>
-          <!-- end row -->
+          <img src="screens/scrcpy.jpg" class="card-img-top" alt="Android">
+          <div class="card-body">
+            <h5 class="card-title">Scrcpy light launcher</h5>
+            <p class="card-text">
+              Control your Android phone or device from your desktop PC using screen mirroring.
+              <br>
+              This is a very light, very fast, very easy and open source alternative.
+              <br>
+              I don't like bloated apps that depend on a million libraries to do simple things.
+              </p>
+            </div>
+            <a href="https://github.com/alvarogonzalezferrer/scrcpy_light_launcher" class="btn btn-primary mt-auto" target='_blank'>Control your phone!</a>
+          </div>
+        </div>
+
+        <div class="col-sm-6">
+          <div class="card h-100">
+            <div class="card-header">
+              Premier Warlord SpeedHack
+            </div>
+            <img src="screens/warlord.jpg" class="card-img-top" alt="Warlord Game">
+            <div class="card-body">
+              <h5 class="card-title">ERP system</h5>
+              <p class="card-text">
+                A speedhack game of evil shooting action, winner most evil category 2007.
+                <br>
+                This game was made in only 24 hs in C++ to fullfil the SpeedHack 2007 rules, and WON most evil game that year.
+              </p>
+
+            </div>
+            <a href="https://github.com/alvarogonzalezferrer/warlord_premier_mr_bush" class="btn btn-primary mt-auto" target='_blank'>Game available!</a>
+
+          </div>
+        </div>
+      </div>
+      <!-- end row -->
 
       <!-- row -->
       <BR>
@@ -487,6 +488,53 @@
 
                             </div>
                           </div>
+                        </div>
+                        <!-- end row -->
+
+                        <!-- row -->
+                        <BR>
+                        <div class="row">
+                        	<div class="col-sm-6">
+                        		<div class="card h-100">
+                        			<div class="card-header">
+                        			Computer technician guide
+                        			</div>
+                        			<img src="screens/tech.jpg" class="card-img-top" alt="Tech">
+                        			<div class="card-body">
+                        				<h5 class="card-title">Computer technician guide</h5>
+                        				<p class="card-text">
+                        				A computer technician guide to repair your friends and family computer. You are "the" tech guy in the family, don't you?
+                        				<br>
+                        				One of the hallmarks of our age is the decline of the do-it-yourselfer in favor of the hire-an-expert-to-do-it-insteader. Toilet not flushing? Hire a plumber. Porch falling down? Hire a carpenter. Lights on the blink? Hire an electrician.
+                        				<br>
+                        				You could argue, as many people have done, that a return to a DIY ethos would be good for society and good for the soul. I like to DIY. Also, I'm a Computer Science graduate, so I get often called as "the" tech guy in family and circle of friends.
+                        				</p>
+                        			</div>
+                        		<a href="https://github.com/alvarogonzalezferrer/computer_technician_guide" class="btn btn-primary mt-auto" target='_blank'>Repair your devices!</a>
+                        		</div>
+                        	</div>
+
+                        	<div class="col-sm-6">
+                        		<div class="card h-100">
+                        			<div class="card-header">
+                        			Full stack development notes
+                        			</div>
+                        		<img src="screens/fullstack.jpg" class="card-img-top" alt="Fullstack">
+                        			<div class="card-body">
+                        			<h5 class="card-title">Full stack development notes</h5>
+                        			<p class="card-text">
+                        			My notes for "full stack developer", and some other things.
+                        			<br>
+                        			Here I am going to put links to things that are useful to me in my professional development.
+                        			<br>
+                        			It is addressed to myself, but if it works for you, if it is useful to you, welcome!
+                        			</p>
+
+                        			</div>
+                        		<a href="https://github.com/alvarogonzalezferrer/apuntes_full_stack_developer" class="btn btn-primary mt-auto" target='_blank'>Full stack dev!</a>
+
+                        		</div>
+                        	</div>
                         </div>
                         <!-- end row -->
 
