--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
             <img src="screens/warlord.jpg" class="card-img-top" alt="Warlord Game">
             <div class="card-body">
-              <h5 class="card-title">ERP system</h5>
+              <h5 class="card-title">Premier Warlord</h5>
               <p class="card-text">
                 A speedhack game of evil shooting action, winner most evil category 2007.
                 <br>
