--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <p>Thanks for visiting my page!</p>
 
-    <p>Below are some of my repositories and since I'm always releasing new code, check it often!</p>
+    <p>Below are some of my repositories, and since I'm always releasing new code, check it often!</p>
 
     <p><a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary btn-block" target='_blank'>GitHub</a>
     </p>
@@ -47,7 +47,7 @@
 
     <p>I'm a Linux expert and contributed to Debian, Ubuntu, Mint and more global repositories.</p>
 
-    <p>I can speak and write English and Spanish.</p>
+    <p>I can speak and write English, and Spanish.</p>
 
     <div class="container">
 
