https://kronoman.itch.io/

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <p><a href="https://ar.linkedin.com/in/alvarogonzalezf" class="btn btn-primary btn-block"
         target='_blank'>LinkedIn</a></p>
 
+    <p><a href="https://kronoman.itch.io/" class="btn btn-primary btn-block" target='_blank'>Itch.io</a>
+    </p>
+
     <h2>Portfolio</h2>
 
     <p>I have an extremely diverse project portfolio, but below are a few. The featured projects below are released
@@ -700,7 +703,8 @@
         Did you found my source code useful? Making this software takes a lot of time, effort, and research.
       </p>
       <p>
-        If you want to help me continue with my work, you can hire me, or donate via Bitcoin to my address, everything helps, it
+        If you want to help me continue with my work, you can hire me, or donate via Bitcoin to my address, everything
+        helps, it
         can be pennies, it doesn't matter how low the donation, is always welcome!!
       </p>
       <p style="font-weight:bold;">
