--- a/index.html
+++ b/index.html
@@ -13,20 +13,16 @@
 <body>
   <div class="container">
     <h1>Álvaro González Ferrer</h1>
-    <h2>Software developer</h2>
+    <h2>Bachelor degree in Computer Science</h2>
+    <h2>software developer</h2>
 
-    <p>I'm Álvaro, also known as Krono, Kronopio and many others "noms de guerre".</p>
-    <p>I have been developing software since I was a kid, starting on an old Commodore 64.</p>
-    <p>I'm a Computer Science graduate from Argentina, game developer, and hobbyist with many interests.</p>
-    <p>I have almost two decades of experience as a game developer, building Indie games, as well as large game studios.
-      In addition, I have many years of experience building business software for small enterprises, and even
-      translation engines.</p>
-    <p>I release source code of my projects when I have the license, but many of my other projects are protected by
-      non-disclosure agreements, therefore I cannot release them.</p>
+    <p>Hello, I'm Álvaro—also known in the gaming community as Krono, Kronopio, and by various other pseudonyms.</p>
 
-    <p>Thanks for visiting my page!</p>
-
-    <p>Below are some of my repositories, and since I'm always releasing new code, check it often!</p>
+    <P>With a Bachelor's degree in Computer Science from Argentina and nearly two decades of experience in game development, I bring a wealth of expertise to the table. My journey began in childhood on an old Commodore 64, and has since evolved into a career that spans indie games to large-scale studios. In addition to game development, I have extensive experience in creating business software for small enterprises and developing translation engines.</P>
+    
+    <P>I’m passionate about sharing my work with the community, so I release the source code for my projects whenever licensing permits. However, some projects are protected by non-disclosure agreements, so they remain confidential.</P>
+    
+    <P>Thank you for visiting my page! Feel free to explore my repositories below, and check back often as I continually release new code.</P>
 
     <p><a href="https://github.com/alvarogonzalezferrer" class="btn btn-primary btn-block" target='_blank'>GitHub</a>
     </p>
